--- a/src/flmmlmonitor.mxml
+++ b/src/flmmlmonitor.mxml
@@ -758,7 +758,7 @@
 	      ]]>
 	</mx:Script>
 
-	<mx:Panel title="FlMMLMonitor Rev.1 (based on FlMML@CodePlex Commit 19253)" width="100%" height="100%"
+	<mx:Panel title="FlMMLMonitor Ver.1 (based on FlMML@CodePlex Commit 19253)" width="100%" height="100%"
 	          paddingTop="4" paddingBottom="4" paddingLeft="4" paddingRight="4">
 	    <mx:VBox width="100%" height="100%"
 	                   paddingTop="4" paddingBottom="4" paddingLeft="4" paddingRight="4">
